# GoodbyeDPI

./: CMakeLists.txt
src/: goodbyedpi.c
